# microservices-with-kubernetes-template

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  ROADMAP.md  References.md  TODOS.md  docker-compose.yaml  go.work  gradlew  jest.config.ts  makefile  nx.json  package.json  pnpm-lock.yaml  pom.xml  settings.gradle
dockerfiles/: otp.dockerfile  profile.dockerfile
documentation/: CONVENTIONS.md  INSTALLATIONS.md  REFERENCES.md  kotlin-concurrency.md
gradle/wrapper/: gradle-wrapper.properties
microservices/authentication/: go.mod  go.sum  main.go  makefile  sqlc.yaml
microservices/authentication/proto/: main.proto  (+6 more)
microservices/otp/: build.gradle  makefile  pom.xml  settings.gradle
microservices/posts/: build.gradle  makefile
microservices/profile/: Cargo.toml  build.rs  diesel.toml  makefile
microservices/profile/src/: main.rs
microservices/profile/src/proto/: create-profile.proto  delete-profile.proto  main.proto
microservices/profile/src/sql/: quries.sql
microservices/tasks/: build.gradle
migrations/: 000001_create-profile-database.down.sql  000001_create-profile-database.up.sql  000002_create-profile-table.down.sql  000002_create-profile-table.up.sql  000004_create-users-table.up.sql  000005_create-post-database.down.sql  000005_create-post-database.up.sql  000006_create-posts-table.down.sql  000006_create-posts-table.up.sql
scripts/: run-cockroachdb-migrations.sh
web/: .eslintrc.json  jest.config.ts  next.config.js  project.json  tsconfig.json
web/pages/: _app.tsx  _document.tsx  index.tsx
(+82 files in other folders)
