[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
prost = "0.11.6"
protobuf = "2.28.0"
tonic = "0.8.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.0.3", features = ["postgres"] }

[build-dependencies]
protoc-rust = "2.28.0"
tonic-build = "0.8.4"
